#
# Makefile.am for the Enterprise Management module.
#
#  Licensed to the Apache Software Foundation (ASF) under one
#  or more contributor license agreements.  See the NOTICE file
#  distributed with this work for additional information
#  regarding copyright ownership.  The ASF licenses this file
#  to you under the Apache License, Version 2.0 (the
#  "License"); you may not use this file except in compliance
#  with the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

man_MANS = \
  config_alarms.1 \
  config_cache.1 \
  config_clock.1 \
  config_dns.1 \
  config_filter.1 \
  config_get.1 \
  config_hard-restart.1 \
  config_hostdb.1 \
  config_http.1 \
  config_icp.1 \
  config_logging.1 \
  config_name.1 \
  config_network.1 \
  config_parent.1 \
  config_port-tunnels.1 \
  config_remap.1 \
  config_reset-stats.1 \
  config_restart.1 \
  config_root.1 \
  config_scheduled-update.1 \
  config_security.1 \
  config_set.1 \
  config_snmp.1 \
  config_socks.1 \
  config_ssl.1 \
  config_start.1 \
  config_stop.1 \
  config_upgrade.1 \
  config_virtual-ip.1 \
  disable.1 \
  enable.1 \
  exit.1 \
  show_alarms.1 \
  show_cache.1 \
  show_cache-stats.1 \
  show_cluster.1 \
  show_dns-resolver.1 \
  show_dns-stats.1 \
  show_filter.1 \
  show_hostdb.1 \
  show_hostdb-stats.1 \
  show_http.1 \
  show_http-stats.1 \
  show_http-trans-stats.1 \
  show_icp.1 \
  show_icp-stats.1 \
  show_logging.1 \
  show_logging-stats.1 \
  show_network.1 \
  show_parent.1 \
  show_port-tunnels.1 \
  show_proxy.1 \
  show_proxy-stats.1 \
  show_remap.1 \
  show_scheduled-update.1 \
  show_security.1 \
  show_snmp.1 \
  show_socks.1 \
  show_ssl.1 \
  show_status.1 \
  show_version.1 \
  show_virtual-ip.1 \
  traffic_shell.1
